1999-08-31 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
Now when you write "=" in cell and you click on the table
you create link between cells.


1999-03-01  David Faure  <faure@kde.org>

	* kspread_view.cc (runLocalScript):
	New menu item : 'run local scripts'.
	Usage : 'edit local scripts', type the script, then
	'reload scripts' (will save & close the buffer), then 'run local
	scripts'. Will have to find a better User Interface !
	
6.2.1999 - Reggie:
------------------
- Fixes for drawing cell borders and cell backgrounds in KoPrintExt

22.1.1999 - Reggie:
-------------------
- Fix for glibc2 systems in lex.l
- KoPrintExt is working correctly now (correct rows/cols are displayed and
  background colors are displayed)
- In KoPrintExt no grid is drawn

Sun May 31 03:11:57 1998  Torben Weis  <weis@localhost>

	* kspread_table.cc (insertChart): Support for KChart added

	* kspread_view.h (View_skel): Improved Marker painting

	* kspread_table.cc (saveCellRect): Added cut/copy/paste

Sun May 24 13:22:11 1998  Torben Weis  <weis@localhost>

	* kspread_view.cc (slotScrollHorz): Fixed ugly marker
	  drawing bug during scrolling.

Mon May  4 13:06:49 1998  Torben Weis  <weis@localhost>

	* kspread_doc.cc (slotChangePaperLayout): Moved Page Layout Dialog
	  to KSpreadDoc
	
	* (paperLayoutDlg): Use Reggies cool KoPageLayoutDia dialog

Sat May  2 16:17:59 1998  Torben Weis  <weis@localhost>

	* kspread_doc.cc (save): Enable saving & loading

Thu Apr 30 02:00:53 1998  Torben Weis  <weis@localhost>

	* kspread_main.cc (start): Changed to work with new
	                  koffice libs.

Wed Apr 22 01:45:47 1998  Torben Weis  <weis@localhost>

	* (resizeEvent): Embedded tables do no longer display
	  scrollbars and additional widgets. They are only shown
	  
	* kspread_view.cc (KSpreadChildFrame): One can now
	  embed child objects in the table.

Tue Apr 21 00:17:41 1998  Torben Weis  <weis@localhost>
