@@ -96,6 +96,7 @@ module KSpread
 		slot void formulaselection( in wstring math );
 		slot void consolidate();
 		slot void gotocell();
+		slot void replace();
 		slot void TextColor();
 		slot void BackgroundColor();
 		slot void RemoveTable();
