@@ -248,6 +248,10 @@ public:
     /**
      * Menu Data
      */
+     void replace();
+    /**
+     * Menu Data
+     */
     void consolidate();
 
     /**
@@ -539,6 +543,7 @@ protected:
     CORBA::Long m_idMenuView_ShowPageBorders;
     OpenPartsUI::Menu_var m_vMenuData;
     CORBA::Long m_idMenuData_Consolidate;
+    CORBA::Long m_idMenuData_replace;
     CORBA::Long m_idMenuData_goto;
     OpenPartsUI::Menu_var m_vMenuFolder;
     CORBA::Long m_idMenuFolder_NewTable;
